--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 
 
 .cabecalho {
-    background-color: rgb(0, 0, 0);
-    color: rgb(18, 77, 0);
+    background-color: #073d00;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
     align-items: center;
