--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ section a {
     text-decoration: none;
 }
 
-.album-lana {
+.cafe {
     width: 18%;
     display: flex;
     flex-direction: row;
@@ -113,7 +113,7 @@ section a {
     align-items: baseline;
 }
 
-.album {
+.produtos {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     display: flex;
