--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 
 .apresentacao-imagemI {
-    width: 50%;
+    width: 10%;
     padding: 24px 0;
 }
 
@@ -160,9 +160,15 @@ section a {
         flex-wrap: wrap;
         justify-content: space-around;
     }
-    .apresentacao-imagemI{
-        width: 10%;
+    .apresentacao-imagemI {
+        width: 50%;
+        padding: 24px 0;
     }
+    .apresentacao-imagemII {
+        width: 50%;
+        padding: 24px 0;
+    }
+
 
 }
     
